--- a/dashboard-page.html
+++ b/dashboard-page.html
@@ -380,9 +380,9 @@
   <script type="text/javascript" src="./assets/igoal-game.js"></script>
 
 	<div id="video-call"   style="
-	left: 90%;
+	left: 80%;
 		top: 0;
-    width:auto;
+    width:20%;
     height: 100%;
     background-color:#264653;
     display: none;
