--- a/dashboard-page.html
+++ b/dashboard-page.html
@@ -5,10 +5,11 @@
 	<meta charset="utf-8">
 	<title>iGOAL-Game</title>
 	<link rel="stylesheet" href="./assets/igoal-game.css">
-	<meta name="viewport" content="width=device-width ,  initial-scale=1.0">
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<!-- Compiled and minified CSS -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
 	<!-- Compiled and minified JavaScript -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
@@ -17,45 +18,45 @@
 	<div    style="width:100%; height :100%;">
   <div class="" style="width:100%; height :100%;">
     <div class="competency-profile valign-wrapper" style="width:100%; height:25%; background-color:#2a9d8f;">
-      <div class="container">
-        <div class="row" style="margin-bottom: 0px !important;">
-          <div class="col s12 m3 l3 valign-wrapper" style="height: 100%;">
+      <div class="container" style="position:absolute;">
+        <div class="row" style="margin-bottom: 0px !important; margin-left: -15px;">
+          <div class="col s12 m3 l3 valign-wrapper" style="height: auto;">
             <img src="./assets/images/avatar-f-young.png" alt="" class="circle"
-            style="height:17vh; margin:auto;">
+            style="height:17vh; max-width: 100%; margin:auto;">
           </div>
-          <div class="col s12 m3 l3">
+          <div class="col s12 m3 l3" >
             <div class="row"> <span>Growth virtues </span>
               <img src="./assets/images/Star 1.png" alt=""
-              style="width: 10px;
-                      height: 10px;">
+							style="width: 5%;
+											height: 5%;">
               <img src="./assets/images/Star 1.png" alt=""
-              style="width: 10px;
-                      height: 10px;">
+							style="width: 5%;
+											height: 5%;">
               <img src="./assets/images/Star 1.png" alt=""
-              style="width: 10px;
-                      height: 10px;">
+							style="width: 5%;
+											height: 5%;">
             </div>
-            <div class="row"> <span>Technical domain</span>
+	   <div class="row" style="font-size: auto;"> <span>Technical domain</span>
               <img src="./assets/images/Star 1.png" alt=""
-              style="width: 10px;
-                      height: 10px;">
+							style="width: 5%;
+											height: 5%;">
               <img src="./assets/images/Star 1.png" alt=""
-              style="width: 10px;
-                      height: 10px;">
+							style="width: 5%;
+                      height: 5%;">
               <img src="./assets/images/Star 1.png" alt=""
-              style="width: 10px;
-                      height: 10px;">
+              style="width: 5%;
+                      height: 5%;">
             </div>
             <div class="row"> <span>Effectual creativity</span>
               <img src="./assets/images/Star 1.png" alt=""
-              style="width: 10px;
-                      height: 10px;">
+							style="width: 5%;
+											height: 5%;">
               <img src="./assets/images/Star 1.png" alt=""
-              style="width: 10px;
-                      height: 10px;">
+							style="width: 5%;
+											height: 5%;">
               <img src="./assets/images/Star 1.png" alt=""
-              style="width: 10px;
-                      height: 10px;">
+							style="width: 4.5%;
+											height: 4.5%;">
             </div>
           </div>
         </div>
@@ -185,7 +186,7 @@
             </div>
           </div>
           <div class="col s4 m4 l4">
-            <span class="text-header">instruction</span>
+            <span class="text-header" style="	margin-left:-20px;">instruction</span>
           </div>
           <div class="col s4 m4 l4" style="
           height:100%;
@@ -195,7 +196,7 @@
             width: 230px;
             position: relative;
             bottom: -9px;
-						margin-left:40px;
+						margin-left:60px;
             border-radius: 10px;
 
             background-color: #E76F51;">
