--- a/dashboard-page.html
+++ b/dashboard-page.html
@@ -47,7 +47,7 @@
               style="width: 5%;
                       height: 5%;">
             </div>
-            <div class="row"> <span>Effectual creativity</span>
+            <div class="row"> <span>Effectual creativit</span>
               <img src="./assets/images/Star 1.png" alt=""
 							style="width: 5%;
 											height: 5%;">
@@ -55,8 +55,8 @@
 							style="width: 5%;
 											height: 5%;">
               <img src="./assets/images/Star 1.png" alt=""
-							style="width: 4.5%;
-											height: 4.5%;">
+							style="width: 5%;
+											height: 5%;">
             </div>
           </div>
         </div>
