--- a/dashboard-page.html
+++ b/dashboard-page.html
@@ -5,11 +5,10 @@
 	<meta charset="utf-8">
 	<title>iGOAL-Game</title>
 	<link rel="stylesheet" href="./assets/igoal-game.css">
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<!-- Compiled and minified CSS -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<!-- Compiled and minified JavaScript -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
@@ -22,10 +21,10 @@
         <div class="row" style="margin-bottom: 0px !important; margin-left: -15px;">
           <div class="col s12 m3 l3 valign-wrapper" style="height: auto;">
             <img src="./assets/images/avatar-f-young.png" alt="" class="circle"
-            style="height:17vh; max-width: 100%; margin:auto;">
+            style="height:30%; width: 60%;; margin:auto;">
           </div>
           <div class="col s12 m3 l3" >
-            <div class="row"> <span>Growth virtues </span>
+            <div class="row" > <span>Growth virtues </span>
               <img src="./assets/images/Star 1.png" alt=""
 							style="width: 5%;
 											height: 5%;">
@@ -36,7 +35,7 @@
 							style="width: 5%;
 											height: 5%;">
             </div>
-	   <div class="row" style="font-size: auto;"> <span>Technical domain</span>
+	   <div class="row" > <span>Technical domain</span>
               <img src="./assets/images/Star 1.png" alt=""
 							style="width: 5%;
 											height: 5%;">
