--- a/dashboard-page.html
+++ b/dashboard-page.html
@@ -13,8 +13,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 
-<body>
-	<div    style="width:100%; height :100%;">
+<body  >
+	<div id="entirewebpage" class="entirewebpage">
   <div class="" style="width:100%; height :100%;">
     <div class="competency-profile valign-wrapper" style="width:100%; height:25%; background-color:#2a9d8f;">
       <div class="container" style="position:absolute;">
@@ -46,7 +46,7 @@
               style="width: 5%;
                       height: 5%;">
             </div>
-            <div class="row"> <span>Effectual creativit</span>
+            <div class="row"> <span>Effectual creativity</span>
               <img src="./assets/images/Star 1.png" alt=""
 							style="width: 5%;
 											height: 5%;" >
@@ -378,6 +378,7 @@
   <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://meet.jit.si/libs/lib-jitsi-meet.min.js"></script> -->
   <script type="text/javascript" src="./assets/igoal-game.js"></script>
+	</div>
 
 	<div id="video-call"   style="
 	left: 80%;
