--- a/NFC-reader.html
+++ b/NFC-reader.html
@@ -38,13 +38,13 @@
                 Please make sure the "Experimental Web Platform features" flag is enabled on Android.</div>
             <pre id="log-nfc-test"></pre>
           </div>
-          <h4 class="center-align white-text">Keep the browser open, this device will be used as nfc scanner</h4>
-          <div class="button" >
-            <a onclick="jitsiGoal = initializeVideo()" class="waves-effect waves-light btn" style=" background-color: #4c9fc1;">Button1</a>
-            <a onclick="hide_video_call()" class="waves-effect waves-light btn" style=" background-color: #4c9fc1;">Button2</a>
-            <a onclick="terminateVideo()" class="waves-effect waves-light btn" style=" background-color: #4c9fc1;">Button3</a>
-            <a onclick="hide_video_call()" class="waves-effect waves-light btn" style=" background-color: #4c9fc1;">Button4</a>
-            <a onclick="terminateVideo()" class="waves-effect waves-light btn" style=" background-color: #4c9fc1;">Button5</a>
+          <h4 class="center-align white-text"></h4>
+          <div class="button" style="justify-content: center; align-items: center;">
+            <a onclick="" class="waves-effect waves-light btn" style=" background-color: #2f6074;">NFC1</a>
+            <a onclick="" class="waves-effect waves-light btn" style=" background-color: #2f6074;">NFC2</a>
+            <a onclick="" class="waves-effect waves-light btn" style=" background-color: #2f6074;">NFC3</a>
+            <a onclick="" class="waves-effect waves-light btn" style=" background-color: #2f6074;">NFC4</a>
+            <a onclick="" class="waves-effect waves-light btn" style=" background-color: #2f6074;">NFC5</a>
           </div>
     </div>
       </div>
