--- a/NFC-reader1.html
+++ b/NFC-reader1.html
@@ -36,16 +36,12 @@
             <div id="content-nfc-test"></div>
             <div id="status-nfc-test">Web NFC is not available.
                 Please make sure the "Experimental Web Platform features" flag is enabled on Android.</div>
-            <pre id="log-nfc-test"></pre>
           </div>
           <h4 class="center-align white-text"></h4>
-          <div class="buttonNFC" >
-            <a onclick="" class="waves-effect waves-light btn" style=" background-color: #2f6074;">NFC1</a>
-            <a onclick="" class="waves-effect waves-light btn" style=" background-color: #2f6074;">NFC2</a>
-            <a onclick="" class="waves-effect waves-light btn" style=" background-color: #2f6074;">NFC3</a>
-            <a onclick="" class="waves-effect waves-light btn" style=" background-color: #2f6074;">NFC4</a>
-            <a onclick="" class="waves-effect waves-light btn" style=" background-color: #2f6074;">NFC5</a>
-          </div>
+						<div class="box bg-2" >
+				      <button class="button1 button--nuka button--round-l button--inverted button--text-thick button--text-upper button--size-s"><a href="NFC-reader.html" >Ohne NFC</a></button>
+				      <button class="button1 button--nuka button--round-l button--inverted button--text-thick button--text-upper button--size-s"><a href="NFC-reader.html" ><img src="./assets/images/nfc.png"> Mit NFC</button>
+				    </div>
     </div>
       </div>
   </div>
