--- a/NFC-reader1.html
+++ b/NFC-reader1.html
@@ -4,14 +4,8 @@
 <head>
 	<link rel="stylesheet" href="./assets/igoal-game.css">
 <title>iGOAL-game</title>
-    <meta charset="utf-8"/>
-    <meta http-equiv="x-ua-compatible" content="ie=edge"/>
-    <meta
-            name="viewport"
-            content="width=device-width, height=device-height, viewport-fit=cover, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
-    />
-    <meta name="mobile-web-app-capable" content="yes"/>
-    <meta name="apple-mobile-web-app-capable" content="yes"/>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -32,7 +26,7 @@
           <div class="" style="width:100%">
             <p class="center-align"> <span class="white-text">2RoDXPsAhATqqxgME</span>::<span class="white-text">R2RoyZ8afZeZjqfRc</span></p>
           </div>
-          <div id="output-nfc-test" class="output-nfc-test card-panel" style="height:40vh!important;">
+          	<div class="w3-panel w3-white w3-round-xlarge" style="height:40vh!important;">
             <div id="content-nfc-test"></div>
             <div id="status-nfc-test">Web NFC is not available.
                 Please make sure the "Experimental Web Platform features" flag is enabled on Android.</div>
