--- a/NFC-reader1.html
+++ b/NFC-reader1.html
@@ -16,7 +16,6 @@
 </head>
 <body>
   <div class="app">
-
       <div class="content-full" style="width: 100vw; height: 100vh; background-color: #264653;">
     <div class="container">
         <br>
@@ -30,11 +29,12 @@
             <div id="content-nfc-test"></div>
             <div id="status-nfc-test">Web NFC is not available.
                 Please make sure the "Experimental Web Platform features" flag is enabled on Android.</div>
+
           </div>
           <h4 class="center-align white-text"></h4>
 						<div class="box bg-2" >
-				      <button class="button1 button--nuka button--round-l button--inverted button--text-thick button--text-upper button--size-s"><a href="NFC-reader.html" >Ohne NFC</a></button>
-				      <button class="button1 button--nuka button--round-l button--inverted button--text-thick button--text-upper button--size-s"><a href="NFC-reader.html" ><img src="./assets/images/nfc.png"> Mit NFC</button>
+				      <button class="button1 button--nuka button--round-l button--inverted button--text-thick button--text-upper button--size-s"><a href="NFC-reader.html" >Ohne NFC<img src="./assets/images/Ohnenfc.png"></a></button>
+				      <button class="button1 button--nuka button--round-l button--inverted button--text-thick button--text-upper button--size-s"><a href="NFC-reader.html" >Mit NFC <img src="./assets/images/nfc.png"> </button>
 				    </div>
     </div>
       </div>
