--- a/NFC-reader.html
+++ b/NFC-reader.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="./assets/igoal-game.css">
+	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <title>iGOAL-game</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -13,31 +14,36 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link rel="stylesheet" href="igoal-game.css">
+		<script>
+		 function alertFunc() {
+			 alert("Web NFC is not available.Please make sure the Experimental Web Platform features flag is enabled on Android.");
+		 }
+		 document.getElementById("demo").innerHTML = alertFunc();</script>
 </head>
 <body>
 	<div class="w3-animate-zoom">
   <div class="app">
-
       <div class="content-full" style="width: 100vw; height: 100vh; background-color: #264653;">
     <div class="container">
-        <br>
+<p id="demo"></p>
+</div>
         <h3 class="center-align white-text">Web-NFC reader</h3>
         <div class="">
           <h5 class="center-align white-text">Live Output</h5>
           <div class="" style="width:100%">
             <p class="center-align"> <span class="white-text">2RoDXPsAhATqqxgME</span>::<span class="white-text">R2RoyZ8afZeZjqfRc</span></p>
           </div>
-          <div id="output-nfc-test" class="output-nfc-test card-panel" style="height:40vh!important;">
-            <div id="content-nfc-test"></div>
-            <div id="status-nfc-test">Web NFC is not available.
-                Please make sure the "Experimental Web Platform features" flag is enabled on Android.</div>
+					<div class="divImage">
+									<img src="./assets/images/nfc_logo.png"  style="height:40vh!important;margin-left: 0%;margin-right: 0%;">
+									</div>
             <pre id="log-nfc-test"></pre>
-          </div>
+
           <h4 class="center-align white-text"></h4>
 					<div class="box bg-2" >
 						<button class="button1 button--nuka button--round-l button--inverted button--text-thick button--text-upper button--size-s"><img src="./assets/images/nfc.png">  NFC 1</button>
 							<button class="button1 button--nuka button--round-l button--inverted button--text-thick button--text-upper button--size-s"><img src="./assets/images/nfc.png">  NFC 2</button>
 								<button class="button1 button--nuka button--round-l button--inverted button--text-thick button--text-upper button--size-s"><img src="./assets/images/nfc.png">  NFC3</button>
+									<button class="button1 button--nuka button--round-l button--inverted button--text-thick button--text-upper button--size-s"><img src="./assets/images/nfc.png">  NFC2</button>
 									<button class="button1 button--nuka button--round-l button--inverted button--text-thick button--text-upper button--size-s"><img src="./assets/images/nfc.png">  NFC2</button>
 					</div>
     </div>
