--- a/Ohne_Nfc_Karte.html
+++ b/Ohne_Nfc_Karte.html
@@ -15,11 +15,12 @@
     <link rel="stylesheet" href="igoal-game.css">
 </head>
 <body>
+		<div class="w3-animate-zoom">
   <div class="app">
       <div class="content-full" style="width: 100vw; height: 100vh; background-color: #264653;">
     <div class="container">
         <br>
-        <h3 class="center-align white-text">Web-NFC reader</h3>
+        <h3 class="center-align white-text">NFC_Karte auswälen</h3>
         <div class="">
           <h5 class="center-align white-text">Live Output</h5>
           <div class="" style="width:100%">
@@ -33,12 +34,16 @@
           </div>
           <h4 class="center-align white-text"></h4>
 						<div class="box bg-2" >
-				      <button class="button1 button--nuka button--round-l button--inverted button--text-thick button--text-upper button--size-s"><a href="NFC-reader.html" >Ohne NFC<img src="./assets/images/Ohnenfc.png"></a></button>
-				      <button class="button1 button--nuka button--round-l button--inverted button--text-thick button--text-upper button--size-s"><a href="NFC-reader.html" >Mit NFC <img src="./assets/images/nfc.png"> </button>
+				         <button onclick=""  class="button1 button--nuka button--round-l button--inverted button--text-thick button--text-upper button--size-s-o">Karte 1<img src="./assets/images/coach.png"> </button>
+				      <button onclick=""  class="button1 button--nuka button--round-l button--inverted button--text-thick button--text-upper button--size-s-o">Karte 2 <img src="./assets/images/coach.png"> </button>
+							   <button onclick=""  class="button1 button--nuka button--round-l button--inverted button--text-thick button--text-upper button--size-s-o">Karte 3 <img src="./assets/images/coach.png"> </button>
+								    <button onclick=""  class="button1 button--nuka button--round-l button--inverted button--text-thick button--text-upper button--size-s-o">Karte 4 <img src="./assets/images/coach.png"> </button>
+										   <button onclick=""  class="button1 button--nuka button--round-l button--inverted button--text-thick button--text-upper button--size-s-o">Karte 5 <img src="./assets/images/coach.png"> </button>
 				    </div>
     </div>
       </div>
   </div>
   </div>
+	</div>
 </body>
 </html>
