--- a/Mit_NFC-reader.html
+++ b/Mit_NFC-reader.html
@@ -8,58 +8,46 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
+<script></script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link rel="stylesheet" href="igoal-game.css">
-		<script>
-		 function alertFunc() {
-			 alert("Web NFC is not available.Please make sure the Experimental Web Platform features flag is enabled on Android.");
-		 }
-		 document.getElementById("demo").innerHTML = alertFunc();</script>
-</head>
 <body>
 	<div class="w3-animate-zoom">
   <div class="app">
       <div class="content-full" style="width: 100vw; height: 100vh; background-color: #264653;">
     <div class="container">
-<p id="demo"></p>
 </div>
-        <h3 class="center-align white-text">Web-NFC reader</h3>
+        <h4 class="center-align white-text">Web-NFC reader</h4>
         <div class="">
           <h5 class="center-align white-text">Live Output</h5>
           <div class="" style="width:100%">
             <p class="center-align"> <span class="white-text">2RoDXPsAhATqqxgME</span>::<span class="white-text">R2RoyZ8afZeZjqfRc</span></p>
           </div>
-					<div class="divImage">
-									<svg id="loading">
-							<g>
-
-							</g>
-							</svg>
-
-							<div>
-							<svg width='182px' height='182px' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="uil-ripple"><rect x="0" y="0" width="100" height="100" fill="none" class="bk"></rect><g> <animate attributeName="opacity" dur="4s" repeatCount="indefinite" begin="0s" keyTimes="0;0.33;1" values="1;1;0"></animate><circle cx="50" cy="50" r="40" stroke="#eeeeee" fill="none" stroke-width="2" stroke-linecap="round"><animate attributeName="r" dur="4s" repeatCount="indefinite" begin="0s" keyTimes="0;0.33;1" values="0;22;44"></animate></circle></g><g><animate attributeName="opacity" dur="4s" repeatCount="indefinite" begin="2s" keyTimes="0;0.33;1" values="1;1;0"></animate><circle cx="50" cy="50" r="40" stroke="#eeeeee" fill="none" stroke-width="2" stroke-linecap="round"><animate attributeName="r" dur="4s" repeatCount="indefinite" begin="2s" keyTimes="0;0.33;1" values="0;22;44"></animate></circle></g></svg>
-
-													</div>
-													<img src="./assets/images/nfc_logo.png"  style="height:40vh!important;margin-left: 0%;margin-right: 0%;">
+					<div class="divImage" style=" position: relative;  text-align: center;margin-bottom:30px">
+								</animate></circle></g></svg>
+							<svg width='182px' height='222px' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="uil-ripple"><rect x="0" y="0" width="100" height="100" fill="none" class="bk"></rect><g> <animate attributeName="opacity" dur="1s" repeatCount="indefinite" begin="0s" keyTimes="0;0.33;1" values="1;1;0"></animate><circle cx="50" cy="50" r="40" stroke="#eeeeee" fill="none" stroke-width="6" stroke-linecap="round"><animate attributeName="r" dur="4s" repeatCount="indefinite" begin="0s" keyTimes="0;0.33;1" values="0;22;44"></animate></circle></g><g><animate attributeName="opacity" dur="4s" repeatCount="indefinite" begin="2s" keyTimes="0;0.33;6" values="1;1;0"></animate><circle cx="50" cy="50" r="40" stroke="#eeeeee" fill="none" stroke-width="3" stroke-linecap="round"><animate attributeName="r" dur="4s" repeatCount="indefinite" begin="2s" keyTimes="0;0.33;1" values="0;22;44">
+		<img src="./assets/images/nfc_logo.png"  style="height:20%!important;  ">
 									</div>
-            <pre id="log-nfc-test"></pre>
-
-          <h4 class="center-align white-text"></h4>
+									<div class="panel panel-default" style="width:80%;height:20% ;text-align: center; margin-left: auto;  margin-right: auto;margin-bottom:30px">
+				  <div class="panel-body"  ><div id="content-nfc-test"></div>
+					<div id="status-nfc-test">Web NFC is not available.
+							Please make sure the "Experimental Web Platform features" flag is enabled on Android.</div>
+				</div></div>
+				</div>
 					<div class="box bg-2" >
-						<button class="button1 button--nuka button--round-l button--inverted button--text-thick button--text-upper button--size-s"><img src="./assets/images/nfc.png">  NFC 1</button>
-							<button class="button1 button--nuka button--round-l button--inverted button--text-thick button--text-upper button--size-s"><img src="./assets/images/nfc.png">  NFC 2</button>
-								<button class="button1 button--nuka button--round-l button--inverted button--text-thick button--text-upper button--size-s"><img src="./assets/images/nfc.png">  NFC3</button>
-									<button class="button1 button--nuka button--round-l button--inverted button--text-thick button--text-upper button--size-s"><img src="./assets/images/nfc.png">  NFC4</button>
-									<button class="button1 button--nuka button--round-l button--inverted button--text-thick button--text-upper button--size-s"><img src="./assets/images/nfc.png">  NFC5</button>
+						<button class="button1 button--nuka button--round-l button--inverted button--text-thick button--text-upper button--size-s-o" type="submit" name="scannen" ><img src="./assets/images/icons8-nfc-80.png">  NFC Scann</button>
+							<button onclick="location.href= ' Ohne_Nfc_Karte.html ' " class="button1 button--nuka button--round-l button--inverted button--text-thick button--text-upper button--size-s-o"><img src="./assets/images/Ohnenfc.png">  Ohne NFC </button>
 					</div>
     </div>
+
       </div>
   </div>
-  </div>
-	</div>
+
 </body>
 </html>
