--- a/Ohne_Nfc_Karte.html
+++ b/Ohne_Nfc_Karte.html
@@ -130,7 +130,7 @@ body{
 
     display: flex;
     /* Works well with 100% width  */
-    width: 140%;
+    width: 150%;
     font-size: 1.5em;
     padding: 0 2.85em;
     position: relative;
@@ -292,7 +292,7 @@ if (document.location.search.match(/type=embed/gi)) {
 <body translate="no" >
   <div class="">
    
-    <h4 class="center-align white-text">Web-NFC reader</h4> 
+    <h4 class="center-align white-text">Card-NFC reader</h4> 
 		<div id="app"style=" position: relative;margin-top:35%">
 
 <div class="wrapper" >
@@ -313,7 +313,7 @@ if (document.location.search.match(/type=embed/gi)) {
 	<script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.9/vue.min.js'></script>
-<menu class="menu" style="margin-top: 500px;left: -20%;">
+<menu class="menu" style="margin-top: 500px;left: -25%;">
   <button class="menu__item" onclick="fensterOeffnen()"   style="--bgColorItem: #4343f5;background-color :#1d1d27;" >
 <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><line x1="12" y1="12" x2="12" y2="12.01" /><path d="M14.828 9.172a4 4 0 0 1 0 5.656" /><path d="M17.657 6.343a8 8 0 0 1 0 11.314" /><path d="M9.168 14.828a4 4 0 0 1 0 -5.656" /><path d="M6.337 17.657a8 8 0 0 1 0 -11.314" /></svg>
   </button>
