--- a/Ohne_Nfc_Karte.html
+++ b/Ohne_Nfc_Karte.html
@@ -19,258 +19,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link rel="stylesheet" href="./assets/karte_Nfc.css">
 
 
 
-<style>
-:root {
-	/* SIZES */
-	--max-width: 758px;
-	--max-height: 420px;
-
-	font-size: 16px;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-
-
-.container {
-	background-color: container;
-	border-radius: var(--button-radius);
-	box-shadow: 0 0.9rem 1.7rem rgba(0, 0, 0, 0.25),
-		0 0.7rem 0.7rem rgba(0, 0, 0, 0.22);
-	height: var(--max-height);
-	max-width: var(--max-width);
-	overflow: hidden;
-	position: relative;
-	width: 100%;
-	height: 100%;
-}
-
-.container__form {
-	height: 100%;
-	position: absolute;
-	top: 0;
-	transition: all 0.6s ease-in-out;
-}
-
-.container--signin {
-	left: 0;
-	width: 100%;
-	z-index: 2;
-}
-
-.container.right-panel-active .container--signin {
-	transform: translateX(100%);
-}
-
-.container--signup {
-	left: 0;
-	opacity: 0;
-	width: 50%;
-	z-index: 1;
-}
-
-.container.right-panel-active .container--signup {
-	-webkit-animation: show 0.6s;
-	        animation: show 0.6s;
-	opacity: 1;
-	transform: translateX(100%);
-	z-index: 5;
-}
-
-.container__overlay {
-	height: 100%;
-	left: 50%;
-	overflow: hidden;
-	position: absolute;
-	top: 0;
-	transition: transform 0.6s ease-in-out;
-	width: 50%;
-	z-index: 100;
-}
-
-.container.right-panel-active .container__overlay {
-	transform: translateX(-100%);
-}
-
-html {
-
-    box-sizing: border-box;
-    --bgColorMenu : #1d1d27;
-    --duration: .7s;
-
-}
-
-html *,
-html *::before,
-html *::after {
-
-    box-sizing: inherit;
-
-}
-
-body{
-
-    margin: 0;
-    display: flex;
-    height: 100vh;
-    overflow: hidden;
-    align-items: center;
-    justify-content: center;
-    background-color: #264653;
-    -webkit-tap-highlight-color: transparent;
-    transition: background-color var(--duration);
-
-}
-
-.menu{
-
-
-    display: flex;
-    /* Works well with 100% width  */
-    width: 150%;
-    font-size: 1.5em;
-    padding: 0 2.85em;
-    position: relative;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--bgColorMenu);
-
-}
-
-.menu__item{
-
-    all: unset;
-    flex-grow: 1;
-    z-index: 100;
-    display: flex;
-    cursor: pointer;
-    position: relative;
-    border-radius: 50%;
-    align-items: center;
-    will-change: transform;
-    justify-content: center;
-    padding: 0.55em 0 0.85em;
-    transition: transform var(--timeOut , var(--duration));
-
-}
-
-.menu__item::before{
-
-    content: "";
-    z-index: -1;
-    width: 4.2em;
-    height: 4.2em;
-    border-radius: 50%;
-    position: absolute;
-    transform: scale(0);
-    transition: background-color var(--duration), transform var(--duration);
-
-}
-
-
-.menu__item.active {
-
-    transform: translate3d(0, -.8em , 0);
-
-}
-
-.menu__item.active::before{
-
-    transform: scale(1);
-    background-color: var(--bgColorItem);
-
-}
-
-.icon{
-
-    width: 2.6em;
-    height: 2.6em;
-    stroke: white;
-    fill: transparent;
-    stroke-width: 1pt;
-    stroke-miterlimit: 10;
-    stroke-linecap: round;
-    stroke-linejoin: round;
-    stroke-dasharray: 400;
-
-}
-
-.menu__item.active .icon {
-
-    animation: strok 1.5s reverse;
-
-}
-
-@keyframes strok {
-
-    100% {
-
-        stroke-dashoffset: 400;
-
-    }
-
-}
-
-.menu__border{
-
-    left: 0;
-    bottom: 99%;
-    width: 10.9em;
-    height: 2.4em;
-    position: absolute;
-    clip-path: url(#menu);
-    will-change: transform;
-    background-color: var(--bgColorMenu);
-    transition: transform var(--timeOut , var(--duration));
-
-}
-
-.svg-container {
-
-    width: 0;
-    height: 0;
-}
-
-
-@media screen and (max-width: 50em) {
-    .menu{
-        font-size: .8em;
-    }
-}
-
-div#app .wrapper {
-  display: flex;
-  max-width: 544px;
-  flex-wrap: wrap;
-  padding-top: 0px;
-}
-div#app .card {
-  box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px, rgba(0, 0, 0, 0.117647) 0px 1px 4px;
-  max-width: 124px;
-  margin: 12px;
-  transition: 0.15s all ease-in-out;
-	width: 76px;
-	height: 140px;
-	display: flex;
-  
-
-}
-div#app .card:hover {
-  transform: scale(1.1);
-}
-
-
-
-div#app .box {
-  width: 200px;
-  height: 140px;
-  border: 1px solid rgba(0, 0, 0, 0.12);
-}
-
-</style>
 
 
 <script>
