--- a/NFC-reader.html
+++ b/NFC-reader.html
@@ -12,7 +12,7 @@
 <head>
 
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
+     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
      <link rel="stylesheet" href="./assets/igoal-game.css">
      <link rel="stylesheet" href="./assets/NFC-reader.css">
  
@@ -25,38 +25,39 @@
 
 </head>
 
-<body translate="no" style="background-color: #264653;">
+<body translate="no"  >
   
-        
+  <div class="w3-container w3-center w3-animate-bottom">
         <div class="">
-          <h4 class="center-align white-text">Web-NFC reader</h4>
-          <h5 class="center-align white-text">Live Output</h5>
+          <h1 class="center-align white-text" style="margin-top: -20%;">Web-NFC reader</h1>
+          <h3 class="center-align white-text">Live Output</h3>
 
             <p class="center-align"> <span class="white-text">2RoDXPsAhATqqxgME</span>::<span class="white-text">R2RoyZ8afZeZjqfRc</span></p>
-
+            <div class="w3-container w3-center w3-animate-left">
             <div class="divImage" style=" position: relative;  text-align: center;margin-bottom:30px">
   								</animate></circle></g></svg>
   							<svg width='182px' height='222px' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="uil-ripple"><rect x="0" y="0" width="100" height="100" fill="none" class="bk"></rect><g> <animate attributeName="opacity" dur="1s" repeatCount="indefinite" begin="0s" keyTimes="0;0.33;1" values="1;1;0"></animate><circle cx="50" cy="50" r="40" stroke="#eeeeee" fill="none" stroke-width="6" stroke-linecap="round"><animate attributeName="r" dur="4s" repeatCount="indefinite" begin="0s" keyTimes="0;0.33;1" values="0;22;44"></animate></circle></g><g><animate attributeName="opacity" dur="4s" repeatCount="indefinite" begin="2s" keyTimes="0;0.33;6" values="1;1;0"></animate><circle cx="50" cy="50" r="40" stroke="#eeeeee" fill="none" stroke-width="3" stroke-linecap="round"><animate attributeName="r" dur="4s" repeatCount="indefinite" begin="2s" keyTimes="0;0.33;1" values="0;22;44">
   		<img src="./assets/images/nfc_logo.png" style="margin-left: 5%;">
                 </div>
+                
 									<div class="panel panel-default" style="width:80%;height:100% ;text-align: center; margin-left: auto;  margin-right: auto;margin-bottom:30px">
 				  <div class="panel-body"  ><div id="content-nfc-test"></div>
 					<div id="status-nfc-test">Web NFC is not available.
 							Please make sure the "Experimental Web Platform features" flag is enabled on Android.</div>
 				</div>
       </div>
-			
-
-
+    </div>
+    </div>
+  </div>
       <menu class="menu" style="margin-top: -0%;" >
 
-          <button class="menu__item active" style="--bgColorItem: #ff8c00;background-color :#1d1d27;" >
+          <button class="menu__item active" style="--bgColorItem: #e9c46a;background-color :#2a9d8f;" >
 
             <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><line x1="12" y1="12" x2="12" y2="12.01" /><path d="M14.828 9.172a4 4 0 0 1 0 5.656" /><path d="M17.657 6.343a8 8 0 0 1 0 11.314" /><path d="M9.168 14.828a4 4 0 0 1 0 -5.656" /><path d="M6.337 17.657a8 8 0 0 1 0 -11.314" /></svg>
           </button>
 
 
-          <button class="menu__item" onclick="fensterOeffnen()" style="--bgColorItem: #4343f5;background-color :#1d1d27;" >
+          <button class="menu__item" onclick="fensterOeffnen()" style="--bgColorItem: #e9c46a;background-color :#2a9d8f;" >
             <!-- Download SVG icon from http://tabler-icons.io/i/access-point -->
   
     <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><line x1="3" y1="3" x2="21" y2="21" /><path d="M14.828 9.172a4 4 0 0 1 1.172 2.828" /><path d="M17.657 6.343a8 8 0 0 1 1.635 8.952" /><path d="M9.168 14.828a4 4 0 0 1 0 -5.656" /><path d="M6.337 17.657a8 8 0 0 1 0 -11.314" /></svg>
